Small code changes

--- a/src/Mango.Services.ProductAPI/appsettings.json
+++ b/src/Mango.Services.ProductAPI/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BLACKDELL\\SQLEXPRESS;Initial Catalog=MangoProductAPI;Persist Security Info=True;User ID=sa;Password=saroot;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Data Source=BLACKDELL\\SQLEXPRESS;Initial Catalog=MangoProductAPI;Persist Security Info=True;User ID=sa;Password=saroot;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=MangoProductAPI;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
