--- a/src/Mango.Services.Identity/appsettings.json
+++ b/src/Mango.Services.Identity/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MangoIdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //    "DefaultConnection": "Server=.;Database=MangoIdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost;Database=MangoIdentityServer;Trusted_Connection=True;MultipleActiveResultSets=true;"
+
   }
 }
