--- a/src/Mango.Services.CouponAPI/appsettings.json
+++ b/src/Mango.Services.CouponAPI/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MangoCouponAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.;Database=MangoCouponAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=MangoCouponAPI;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
