--- a/src/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/src/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "ServiceUrls": {
     "CouponAPI": "https://localhost:44393"
