--- a/src/Mango.GatewaySolution/Mango.GatewaySolution.csproj
+++ b/src/Mango.GatewaySolution/Mango.GatewaySolution.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="5.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0-preview.3.21201.13" />
-    <PackageReference Include="Ocelot" Version="17.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
+    <PackageReference Include="Ocelot" Version="18.0.0" />
   </ItemGroup>
 
 </Project>
