Small code changes

--- a/src/Mango.GatewaySolution/appsettings.json
+++ b/src/Mango.GatewaySolution/appsettings.json
@@ -6,12 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-  //"ProductAPI": "https://localhost:44390",
-
-  //"ShoppingCartAPI": "https://localhost:44338",
-  //"CouponAPI": "https://localhost:44393",
-  ,
+  "AllowedHosts": "*",
+  //"ProductAPI": "https://localhost:5011",
+  //"ShoppingCartAPI": "https://localhost:5031",
+  //"CouponAPI": "https://localhost:5041"
+ 
 
   "Routes": [
     {
@@ -20,7 +19,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44390
+          "Port": 5011
         }
       ],
       "UpstreamPathTemplate": "/api/products",
@@ -32,7 +31,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44390
+          "Port": 5011
         }
       ],
       "UpstreamPathTemplate": "/api/products/{id}",
@@ -44,7 +43,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44390
+          "Port": 5011
         }
       ],
       "UpstreamPathTemplate": "/api/products",
@@ -60,7 +59,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44390
+          "Port": 5011
         }
       ],
       "UpstreamPathTemplate": "/api/products/{id}",
@@ -70,6 +69,7 @@
         "AllowedScopes": [ "mango" ]
       }
     },
+
     //cart settings
 
     {
@@ -78,7 +78,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/AddCart",
@@ -94,7 +94,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/ApplyCoupon",
@@ -110,7 +110,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/checkout",
@@ -126,7 +126,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/GetCart/{userId}",
@@ -142,7 +142,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/RemoveCoupon",
@@ -158,7 +158,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/RemoveCart",
@@ -174,7 +174,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44338
+          "Port": 5031
         }
       ],
       "UpstreamPathTemplate": "/api/cart/UpdateCart",
@@ -191,7 +191,7 @@
       "DownstreamHostAndPorts": [
         {
           "Host": "localhost",
-          "Port": 44393
+          "Port": 5041
         }
       ],
       "UpstreamPathTemplate": "/api/coupon/{couponCode}",
@@ -203,7 +203,7 @@
     }
   ],
   "GlobalConfiguration": {
-    "BaseUrl": "https://localhost:5050"
+    "BaseUrl": "https://localhost:5071"
   }
-  
+
 }
