--- a/src/Mango.Web/appsettings.json
+++ b/src/Mango.Web/appsettings.json
@@ -9,8 +9,13 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "IdentityAPI": "https://localhost:5021",
-    "ProductAPI": "https://localhost:5011",
-    "ShoppingCartAPI": "https://localhost:5031",
-    "CouponAPI": "https://localhost:5041"
+
+    //"ProductAPI": "https://localhost:5011",
+    //"ShoppingCartAPI": "https://localhost:5031",
+    //"CouponAPI": "https://localhost:5041",
+
+    "ProductAPI": "https://localhost:5071",
+    "ShoppingCartAPI": "https://localhost:5071",
+    "CouponAPI": "https://localhost:5071"
   }
 }
