--- a/src/Mango.Services.Email/appsettings.json
+++ b/src/Mango.Services.Email/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "ServiceBusConnectionString": "Endpoint=sb://mangorestaurant.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=7t3usJ6tooj30PRi5ccrTwbxS6DNGPxbmp2oVdiO3cI=",
   "SubscriptionName": "emailSubscription",
