--- a/src/Mango.Services.PaymentAPI/Mango.Services.PaymentAPI.csproj
+++ b/src/Mango.Services.PaymentAPI/Mango.Services.PaymentAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Mango.MessageBus\Mango.MessageBus.csproj" />
     <ProjectReference Include="..\PaymentProcessor\PaymentProcessor.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extension\" />
   </ItemGroup>
 
 </Project>
